Updated swagger info.
