# docs/swagger.yaml
@@ -1,5 +1,38 @@
 basePath: /
-host: api.istekbin.com
+definitions:
+  echo.HTTPError:
+    properties:
+      message:
+        type: object
+    type: object
+  handler.Request:
+    properties:
+      body:
+        type: string
+      content_type:
+        type: string
+      cookies:
+        additionalProperties:
+          type: string
+        type: object
+      created_at:
+        type: string
+      headers:
+        additionalProperties:
+          type: string
+        type: object
+      host:
+        type: string
+      ip:
+        type: string
+      method:
+        type: string
+      uri:
+        type: string
+      user_agent:
+        type: string
+    type: object
+host: localhost:1323
 info:
   contact:
     name: API Support
@@ -10,5 +43,57 @@ info:
     url: https://github.com/BatuhanKucukali/istekbin-api/blob/master/LICENSE
   title: Istekbin API
   version: "1.0"
-paths: {}
+paths:
+  /:
+    get:
+      consumes:
+      - text/plain
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      summary: Welcome page
+  /c:
+    post:
+      consumes:
+      - application/json
+      responses:
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+      summary: Create istekbin
+  /l/{uuid}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: uuid
+        in: path
+        name: uuid
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/handler.Request'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+      summary: List istekbin
 swagger: "2.0"
