# handler/create_handler.go
@@ -9,6 +9,12 @@ import (
 	"net/http"
 )
 
+// Create Istekbin
+// @Summary Create istekbin
+// @Accept  json
+// @Header 201 {string} Location "uuid"
+// @Failure 500 {object} echo.HTTPError
+// @Router /c [post]
 func CreateHandler(conf *config.App, rd *redis.Client) func(c echo.Context) error {
 	return func(c echo.Context) error {
 		key := uuid.New().String()
