# handler/list_handler.go
@@ -8,6 +8,16 @@ import (
 	"net/http"
 )
 
+// List Istekbin
+// @Summary List istekbin
+// @Accept  json
+// @Produce json
+// @Success 200 {object} []handler.Request
+// @Param uuid path string true "uuid"
+// @Failure 400 {object} echo.HTTPError
+// @Failure 404 {object} echo.HTTPError
+// @Failure 500 {object} echo.HTTPError
+// @Router /l/{uuid} [get]
 func ListHandler(rd *redis.Client) func(c echo.Context) error {
 	return func(c echo.Context) error {
 		u, err := uuid.Parse(c.Param("uuid"))
